[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dynamodb_pycrud"]

[tool.setuptools.package_data]
dynamodb_pycrud = ["data/*"]  # Optional, in case you have non-Python files to include

[tool.setuptools.options]
install_requires = [
    "boto3>=1.28.0",
    "botocore>=1.28.0"
]
